# hypar

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CI_WORKFLOWS.md  CMAKE.md  CMakeLists.txt  Doxyfile  License.md  Makefile.am  README.md  TESTING_IMPLEMENTATION.md  configure.ac
doc/templates/: Makefile.am  README_TEMPLATES.md  TemplateModelAdvection.c  TemplateModelCleanup.c  TemplateModelComputeCFL.c  TemplateModelInitialize.c  TemplateModelUpwind.c  template_model.h
src/: CMakeLists.txt  Makefile.am  main.c  main.cpp
src/ArrayFunctions/: ArrayImplementations_GPU.cu  Makefile.am
src/BandedMatrix/: BandedMatrixDestroy.c  BandedMatrixInitialize.c  BandedMatrixPreallocate.c
src/BoundaryConditions/: BCCleanup.c  BCDirichlet.c  BCExtrapolate.c  BCIO.c  BCInitialize.c  BCNoFlux.c  BCNoslipWall.c  BCPeriodic.c  BCPeriodic_GPU.cu  BCReflect.c  BCSWSlipWall.c  BCSlipWall.c  BCSlipWall_GPU.cu  BCSponge.c  BCSubsonicAmbivalent.c  BCSubsonicInflow.c  BCSubsonicOutflow.c  BCSupersonicInflow.c  BCSupersonicOutflow.c  BCThermalNoslipWall.c  BCThermalSlipWall.c  BCTurbulentSupersonicInflow.c  Makefile.am
src/CommonFunctions/: CommonFunctions.c  Makefile.am  ParallelReduction_GPU.cu
src/EnsembleSimulations/: Makefile.am
src/FirstDerivative/: FirstDerivativeFirstOrder.c  FirstDerivativeFourthOrder.c  FirstDerivativeFourthOrder_GPU.cu  FirstDerivativeSecondOrder.c  FirstDerivativeSecondOrderNoGhosts.c  Makefile.am
src/HyParFunctions/: ApplyBoundaryConditions.c  ApplyIBConditions.c  BoundaryIntegral.c  CalculateConservationError.c  CalculateError.c  CalculateROMDiff.c  ComputeRHSOperators.c  ExactSolution.c  HyperbolicFunction.c  HyperbolicFunction_GPU.cu  IncrementFilename.c  InitializeBoundaries.c  InitializeSolvers.c  Makefile.am  NonLinearInterpolation.c  ParabolicFunctionCons1Stage.c  ParabolicFunctionNC1.5Stage.c  ParabolicFunctionNC1Stage.c  ParabolicFunctionNC2Stage.c  ParabolicFunctionNC2Stage_GPU.cu  SourceFunction.c  VolumeIntegral.c
src/IOFunctions/: Makefile.am  ReadArray.c  ReadArraywInterp.c  WriteArray.c  WriteBinary.c  WriteTecplot2D.c  WriteTecplot3D.c  WriteText.c
src/ImmersedBoundaries/: IBAssembleGlobalFacetData.c  IBCleanup.c  IBComputeBoundingBox.c  IBComputeFacetVar.c  IBComputeNormalGradient.c  IBCreateFacetMapping.c  IBIdentifyBody.c  IBIdentifyBoundary.c  IBIdentifyMode.c  IBInterpCoeffs.c  IBNearestFacetNormal.c  IBReadBodySTL.c  IBWriteBodySTL.c
src/InterpolationFunctions/: CompactSchemeCleanup.c  CompactSchemeInitialize.c  Interp1PrimFifthOrderCRWENO.c  Interp1PrimFifthOrderCRWENOChar.c  Interp1PrimFifthOrderCompactUpwind.c  Interp1PrimFifthOrderCompactUpwindChar.c  Interp1PrimFifthOrderHCWENO.c  Interp1PrimFifthOrderHCWENOChar.c  Interp1PrimFifthOrderUpwind.c  Interp1PrimFifthOrderUpwindChar.c  Interp1PrimFifthOrderWENO.c  Interp1PrimFifthOrderWENOChar.c  Interp1PrimFifthOrderWENO_GPU.cu  Interp1PrimFirstOrderUpwind.c  Interp1PrimFirstOrderUpwindChar.c  Interp1PrimFourthOrderCentral.c  Interp1PrimFourthOrderCentralChar.c  Interp1PrimSecondOrderCentral.c  Interp1PrimSecondOrderCentralChar.c  Interp1PrimSecondOrderMUSCL.c  Interp1PrimSecondOrderMUSCLChar.c  Interp1PrimThirdOrderMUSCL.c  Interp1PrimThirdOrderMUSCLChar.c  Interp2PrimSecondOrder.c  MUSCLInitialize.c  Makefile.am  WENOCleanup.c  WENOFifthOrderCalculateWeights.c  WENOFifthOrderCalculateWeights_GPU.cu  WENOFifthOrderInitializeWeights.c  WENOInitialize.c
src/LimiterFunctions/: LimiterGeneralizedMinMod.c  LimiterMinMod.c  LimiterSuperBee.c  LimiterVanLeer.c  Makefile.am
src/MPIFunctions/: MPIBroadcast.c  MPICommunicators.c  MPIExchangeBoundaries1D.c  MPIExchangeBoundariesnD.c  MPIExchangeBoundariesnD_GPU.cu  MPIGatherArray1D.c  MPIGatherArraynD.c  MPIGetArrayDatanD.c  MPIGetFilename.c  MPIIOGroups.c  MPILocalDomainLimits.c  MPIMax.c  MPIMin.c  MPIPartition1D.c  MPIPartitionArray1D.c  MPIPartitionArraynD.c  MPIRank1D.c  MPIRanknD.c  MPISum.c  Makefile.am
src/MathFunctions/: FillGhostCells.c  FindInterval.c  InterpolateGlobalnDVar.c  Makefile.am  TrilinearInterpolation.c
src/PETScFunctions/: Makefile.am  PetscCleanup.cpp  PetscComputePreconMatIMEX.c  PetscComputePreconMatIMEX.cpp  PetscComputePreconMatImpl.c  PetscComputePreconMatImpl.cpp  PetscComputeRHSOperators.c  PetscCreatePointList.cpp  PetscError.cpp  PetscGlobalDOF.cpp  PetscIFunctionIMEX.c  PetscIFunctionIMEX.cpp  PetscIFunctionImpl.cpp  PetscIJacobian.c  PetscIJacobian.cpp  PetscIJacobianIMEX.c  PetscIJacobianIMEX.cpp  PetscJacobianMatNonzeroEntriesImpl.cpp  PetscPostStage.cpp  PetscPostTimeStep.c  PetscPostTimeStep.cpp  PetscPreStage.cpp  PetscPreTimeStep.c  PetscPreTimeStep.cpp  PetscRHSFunctionExpl.c  PetscRHSFunctionExpl.cpp  PetscRHSFunctionIMEX.c  PetscRHSFunctionIMEX.cpp  PetscRHSFunctionImpl.c  PetscRHSFunctionImpl.cpp  PetscRegisterTIMethods.c  PetscRegisterTIMethods.cpp  PetscSetInitialGuessROM.cpp  TransferFromPETSc.cpp  TransferToPETSc.cpp
src/PhysicalModels/: Makefile.am
src/PlottingFunctions/: Makefile.am  PlotArray.c  PlotArray.cpp  plotSolution.py
src/ROM/: DMDROMObject.cpp  LSROMObject.cpp  Makefile.am  libROMInterface.cpp
src/SecondDerivative/: Makefile.am  SecondDerivativeFourthOrder.c  SecondDerivativeSecondOrder.c  SecondDerivativeSecondOrderNoGhosts.c
src/Simulation/: Cleanup.c  CombineSolutions.c  EnsembleSimulationsDefine.cpp  InitialSolution.c  Initialize.c  InitializeBoundaries.c  InitializeImmersedBoundaries.c  InitializePhysics.c  InitializePhysicsData.c  InitializeSolvers.c  Makefile.am  OutputROMSolution.c  OutputROMSolution.cpp  OutputSolution.c  OutputSolution.cpp  ReadInputs.c  SimulationWriteErrors.c  SingleSimulationDefine.cpp  Solve.c  Solve.cpp  SolvePETSc.c  SolvePETSc.cpp  WriteInputs.c  libROMInterface.cpp
src/SparseGrids/: Makefile.am  SparseGridsCalculateError.cpp  SparseGridsCombinationTechnique.cpp  SparseGridsDefine.cpp  SparseGridsFillGhostCells.cpp  SparseGridsInitialSolution.cpp  SparseGridsInitializationWrapup.cpp  SparseGridsInitialize.cpp  SparseGridsSolve.cpp  (+7 more)
tests/: .gitignore  CMakeLists.txt  Makefile.am  QUICKSTART.md  README.md  SUMMARY.md  TEST_SUMMARY.md
(+783 files in other folders)
