# Makefile.am for Template Model
# [REPLACE] Update library name and source files

noinst_LIBRARIES = libtemplatemodel.a

libtemplatemodel_a_SOURCES = \
  TemplateModelInitialize.c \
  TemplateModelCleanup.c \
  TemplateModelAdvection.c \
  TemplateModelUpwind.c \
  TemplateModelComputeCFL.c

# [REPLACE] Add additional source files as needed:
# TemplateModelDiffusion.c \
# TemplateModelSource.c \
# TemplateModelComputeDiffNumber.c \
# TemplateModelEigen.c \
# TemplateModelPreStep.c \
# TemplateModelPostStep.c \
# TemplateModelFunctions.c
