noinst_LIBRARIES = libBoundaryConditions.a
libBoundaryConditions_a_SOURCES = \
  BCCleanup.c \
  BCDirichlet.c \
  BCExtrapolate.c \
  BCInitialize.c \
  BCIO.c \
  BCNoFlux.c \
  BCNoslipWall.c \
  BCPeriodic.c \
  BCReflect.c \
  BCSlipWall.c \
  BCSponge.c \
	BCSubsonicAmbivalent.c \
	BCSubsonicInflow.c \
	BCSubsonicOutflow.c \
	BCSupersonicInflow.c \
	BCSupersonicOutflow.c \
  BCSWSlipWall.c \
  BCThermalNoslipWall.c \
  BCThermalSlipWall.c \
	BCTurbulentSupersonicInflow.c
